clean up server start script and Dockerfile